fix(style): add global overflow-x-hidden

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
